--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
+    "lucide-react": "^0.552.0",
     "motion": "^12.23.24",
     "next": "16.0.1",
     "react": "19.2.0",
