--- a/.env.example
+++ b/.env.example
@@ -3,9 +3,11 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=
 SUPABASE_SERVICE_ROLE_KEY=
 CONTACT_FOUNDER=
 OPENAI_API_KEY=
-RAZOPAY_TEST_KEY_ID=
+RAZORPAY_TEST_KEY_ID=
+NEXT_PUBLIC_RAZORPAY_LIVE_KEY_ID=
 RAZORPAY_TEST_KEY_SECRET=
-RAZOPAY_Live_Key_ID=
+RAZORPAY_LIVE_KEY_ID=
+NEXT_PUBLIC_RAZORPAY_LIVE_KEY_ID=
 RAZORPAY_LIVE_KEY_SECRET=
 RAZORPAY_WEBHOOK_SECRET_LIVE=
 RAZORPAY_WEBHOOK_SECRET_TEST=
